
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)
------------------------------------------------------------------
HEAD    (2004-03-09)
	Fixed minor warnings in DB.pm and GUI.pm 
			Johannes
------------------------------------------------------------------
HEAD    (2004-03-05) 
	fix schema code when no schema is defined
			author: dws
	Re-Tested by Johannes
------------------------------------------------------------------
HEAD    (2004-03-01)

* Fixed schema support: Add default value for "schema" config value.
	Patch waiting for Freek Zindels Comments.

------------------------------------------------------------------
HEAD    (2004-02-13)

* Added widget radio button

  MODIFIED FILES:
	/usr/cvs/gedafe/gedafe/doc/gedafe-sql.pod,v
	/usr/cvs/gedafe/gedafe/lib/perl/Gedafe/GUI.pm,v
 (Johannes)
------------------------------------------------------------------
HEAD    (2004-02-12)
* Made 2 column edit/add layout configurable

  The meta tables attribute "twocol" is used to control
  one vs two column layout of a table. documentation included
	(Johannes)
  MODIFIED FILES:
        doc/gedafe-sql.pod example/templates/editfield.html
        lib/perl/Gedafe/GUI.pm

------------------------------------------------------------------
HEAD    (2004-02-11)
  * Add draft documentation to the "showref" attribute in meta_tables.
	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-11)
  * Added schema support. See gedafe-user.pod. Should work with
    postgres < 7.3 also. Changes to:
    NEWS doc/gedafe-sql.pod doc/gedafe-user.pod example/demo1.cgi
    lib/perl/Gedafe/DB.pm lib/perl/Gedafe/Start.pm
    	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-09)
  * forgot a #endif in example example/templates/header.html